--- a/projet.ipynb
+++ b/projet.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Nous avons décidé de réaliser un chatbot médical (**MedBot**). Au vu de nos connaissances, du temps dont on dispose et surtout de nos ressources actuelles, nous savons que nous ne pouvons pas réaliser un chatbot réellement performant.\n",
     "\n",
-    "L'objectif était, pour nous, de pouvoir lui donner un/des symptôme(s) et qu'il nous donne un diagnostic possible.\n",
+    "L'objectif était, pour nous, une version très simple : pouvoir lui donner un/des symptôme(s) et qu'il nous donne un diagnostic possible.\n",
     "Nous parlerons des améliorations possibles que nous aurions aimé implémenter à la fin de ce notebook.\n",
     "_________________________________"
    ]
@@ -35,7 +35,7 @@
    "source": [
     "## Importer le dataset\n",
     "\n",
-    "Nous avons travaillé sur Google Colab tout au long de ce projet afin ed bénéficier du GPU que propose le site. En effet, lors de l'entraînement du modèle, l'utilisation seule du CPU n'était pas assez performante.\n",
+    "Nous avons travaillé sur Google Colab tout au long de ce projet afin de bénéficier du GPU que propose le site. En effet, lors de l'entraînement du modèle, l'utilisation seule du CPU n'était pas assez performante.\n",
     "\n",
     "La cellule suivante permet d'importer le dataset dans l'environnement de Google Colab."
    ]
