--- a/projet.ipynb
+++ b/projet.ipynb
@@ -1031,6 +1031,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### quelques exemples de symptômes à tester\n",
+    "(cette liste n'est pas exhaustive)\n",
+    "\n",
+    "pimples, hyperactivity, itchy eyes, confusion with time, weight loss, wheezing, delayed learning, lacking energy, tiredness, stomach cramps, diarrhoea, nausea, joint pain, cyclic fever, nervousness, crepitus, constipation, irritable, lack of appetite..."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
